Updated pom and module info.java for google integration. Added new requires for module-info.java.